# agentland

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT  README.md  go.mod  go.sum
.github/workflows/: dockerhub-branch-images.yml  lint.yml
api/v1alpha1/: agentruntime_types.go  codeinterpreter_types.go  coderunner_types.go  groupversion_info.go  sandbox_types.go  sandboxclaim_types.go  sandboxpool_types.go  zz_generated.deepcopy.go
charts/agentland/: Chart.yaml  values.yaml
cmd/: main.go
cmd/agentcore/: main.go
cmd/gateway/: main.go
cmd/harud/: main.go
cmd/korokd/: main.go
cmd/landcore/: main.go
config/crd/: agentland.fl0rencess720.app_codeinterpreters.yaml  kustomization.yaml
config/default/: agentcore_service.yaml  kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: kustomization.yaml  (+11 more)
docker/: Dockerfile.agentcore  Dockerfile.gateway  Dockerfile.harud  Dockerfile.korokd  entrypoint.korokd.sh
docs/: api.md
idl/: agentcore.proto  code_runner.proto  codeinterpreter.proto
rpc/: code_runner.pb.go  code_runner_grpc.pb.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentland/: __init__.py  _mcp_args.py  cli.py
sdk/python/src/agentland/mcp/: __init__.py  __main__.py  bridge.py  server.py
sdk/python/src/agentland/sandbox/: __init__.py  _http.py  errors.py  results.py  sandbox.py
sdk/python/tests/: test_cli.py  test_mcp_args.py  test_mcp_bridge.py  test_sandbox_sdk.py
(+136 files in other folders)
