[project]
name = "agentland"
version = "0.1.0"
description = "Agentland Python SDK for code-runner sandbox APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.0.0",
]

[project.scripts]
agentland = "agentland.cli:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentland"]

[tool.uv]
default-groups = []
